--- a/song-tracker-ui.css
+++ b/song-tracker-ui.css
@@ -1,7 +1,13 @@
 html, body {margin:0;padding:0;font-family: Helvetica, sans-serif;}
-.song-list {
+.song-list-search {
 	position:fixed;
 	top:0;
+	left:0;
+	width:200px;
+}
+.song-list {
+	position:fixed;
+	top:21px;
 	left:0;
 	bottom:0;
 	width:200px;
